# mealpy-next

./: .gitignore  CHANGELOG.md  PAPERS.md  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: EXAMPLES.md  build_new_optimizer.py  run_all_parameters.py  run_multi_functions.py  run_multi_functions_multi_trials.py  run_multi_functions_multi_trials_parallel.py  run_multi_functions_parallel.py  run_multitask.ipynb  run_multitask.py  run_simple_function.py  run_tuner.ipynb  run_tuner.py
examples/applications/: run_constraint_functions.py  run_distributed_optimization.py  run_large_scale_optimization.py  run_multi_objective_functions.py
examples/applications/discrete-problems/: cloud_task_scheduling.py  employee_rostering.py  job_shop_scheduling.py  knapsack_problem.ipynb  location_optimization.py  maintenance_scheduling.py  product_planning.ipynb  production_optimization.py  shortest_path_problem.py  supply_chain_optimization.py  (+2 more)
examples/optimizers/: run_bwo_example.py
examples/utils/: history_best_worst.py  io_save_load_model.py  run_BinaryVar.py  run_BoolVar.py  run_CategoricalVar.py  run_FloatVar.py  run_IntegerVar.py  run_Mix_Type.py  run_PermutationVar.py  run_SequenceVar.py  run_StringVar.py  run_Target.py  run_TransferBinaryVar.py  run_TransferBoolVar.py  run_g_best.py  run_problem.ipynb  run_termination.py  run_time.py
mealpy/: __init__.py  multitask.py  optimizer.py  tuner.py
mealpy/bio_based/: BBO.py  BBOA.py  BCO.py  BMO.py  EAO.py  EOA.py  IWO.py  SBO.py  SFOA.py  SMA.py  SOA.py  SOS.py  TPO.py  TSA.py  VCS.py  WHO.py
mealpy/evolutionary_based/: BWO.py  CRO.py  DE.py  EP.py  ES.py  FPA.py  GA.py  MA.py  SHADE.py
mealpy/game_based/: THRO.py
mealpy/human_based/: AFT.py  BRO.py  BSO.py  CA.py  CDDO.py  CHIO.py  DOA.py  FBIO.py  GSKA.py  HBO.py  HCO.py  ICA.py  LCO.py  QSA.py  SARO.py  SPBO.py  SSDO.py  TLO.py  TOA.py  WarSO.py
mealpy/math_based/: AOA.py  CEM.py  CGO.py  CircleSA.py  GBO.py  HC.py  INFO.py  PSS.py  RUN.py  SCA.py  SHIO.py  TS.py
mealpy/music_based/: HS.py
mealpy/physics_based/: ASO.py  ArchOA.py  CDO.py  EFO.py  EO.py  ESO.py  EVO.py  FLA.py  HGSO.py  MSO.py  MVO.py  NRO.py  RIME.py  SA.py  SOO.py  TWO.py  WDO.py
mealpy/sota_based/: IMODE.py  LSHADEcnEpSin.py
mealpy/swarm_based/: ABC.py  ACOR.py  AGTO.py  ALO.py  AO.py  ARO.py  AVOA.py  BA.py  BES.py  BFO.py  BSA.py  BeesA.py  COA.py  CSA.py  CSO.py  CoatiOA.py  DMOA.py  DO.py  EHO.py  EPC.py  ESOA.py  FA.py  FDO.py  FFA.py  FFO.py  FOA.py  FOX.py  GJO.py  GOA.py  GTO.py  GWO.py  HBA.py  HGS.py  HHO.py  JA.py  MFO.py  MGO.py  MPA.py  MRFO.py  MSA.py  (+26 more)
mealpy/system_based/: AEO.py  GCO.py  WCA.py
mealpy/utils/: __init__.py  agent.py  history.py  io.py  logger.py  problem.py  space.py  target.py  termination.py  validator.py
tests/: test_optimizer.py  test_tuner.py
tests/bio_based/: test_BBO.py  test_EOA.py  test_IWO.py  test_SBO.py  test_SMA.py  test_VCS.py  test_WHO.py
tests/evolutionary_based/: test_CRO.py  test_DE.py  test_EP.py  test_ES.py  test_FPA.py  test_MA.py  test_SHADE.py
tests/human_based/: test_BRO.py  test_BSO.py  test_CA.py  test_CHIO.py  test_FBIO.py  test_GSKA.py  test_ICA.py  test_LCO.py  test_QSA.py  test_SARO.py  test_SSDO.py  test_TLO.py
tests/math_based/: test_AOA.py  test_CEM.py  test_CGO.py  test_GBO.py  test_HC.py  test_PSS.py  test_SCA.py  test_TS.py
tests/music_based/: test_HS.py
tests/physics_based/: test_ASO.py  test_ArchOA.py  test_EFO.py  test_EO.py  test_HGSO.py  test_MVO.py  test_NRO.py  test_SA.py  test_TWO.py  test_WDO.py
tests/swarm_based/: test_AO.py  test_BA.py  test_BES.py  test_BFO.py  test_BeesA.py  test_COA.py  test_CSA.py  test_CSO.py  test_DO.py  test_FFA.py  test_FOA.py  test_GOA.py  test_GWO.py  test_HGS.py  test_HHO.py  test_JA.py  test_MFO.py  test_MFRO.py  test_MSA.py  test_NMRA.py  test_PFA.py  test_PSO.py  test_SFO.py  test_SHO.py  test_SLO.py  test_SRSR.py  test_SSA.py  test_SSO.py  test_SSpiderA.py  test_SSpiderO.py  test_WOA.py
tests/system_based/: test_AEO.py  test_GCO.py  test_WCA.py
tests/utils/: test_termination.py  test_validator.py
(+18 files in other folders)
