[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealpy-lts"
dynamic = ["version"]
description = "An Open-source Library for Latest Meta-heuristic Algorithms in Python"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Thieu", email = "nguyenthieu2102@gmail.com" }
]

maintainers = [
    { name = "ltsim", email = "tsim@cucei.udg.mx" }
]

keywords = [
    "optimization", "metaheuristics", "MHA", "mathematical optimization",
    "nature-inspired algorithms", "evolutionary computation", "soft computing",
    "population-based algorithms", "Stochastic optimization", "Global optimization",
    "Convergence analysis", "Search space exploration", "Local search",
    "Computational intelligence", "Black-box optimization", "Robust optimization",
    "Hybrid algorithms", "Benchmark functions", "Metaheuristic design",
    "Performance analysis", "Exploration versus exploitation", "Self-adaptation",
    "Constrained optimization", "Intelligent optimization", "Adaptive search",
    "Simulations", "Algorithm selection",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Benchmark",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.15.0",
    "pandas>=2.2.2",
    "matplotlib>=3.10.9",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9.0",
    "twine>=5.0",
    "flake8>=7.0",
    "pandas-stubs>=2.2.3",
    "scipy-stubs>=1.15.0",
]

[project.urls]
"Homepage" = "https://github.com/ltsim/mealpy-lts"
"Documentation" = "https://mealpy.readthedocs.io/"
"Source Code" = "https://github.com/ltsim/mealpy-lts"
"Bug Tracker" = "https://github.com/ltsim/mealpy-lts/issues"
"Change Log" = "https://github.com/ltsim/mealpy-lts/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "mealpy.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.mypy]
files = ["mealpy"]
exclude = ["tests/", "docs/", "examples/"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
check_untyped_defs = true
warn_return_any = false
show_error_codes = true
show_column_numbers = true
pretty = true
error_summary = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "tqdm.*"]
ignore_missing_imports = true